--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Project_Company_Management
 excludes=
 file.reference.KControls-2.0.jar=C:\\Users\\ASUS\\Desktop\\KControls\\dist\\KControls-2.0.jar
+file.reference.KControls-2.0.jar-1=../../KControls/dist/KControls-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.KControls-2.0.jar}
+    ${file.reference.KControls-2.0.jar}:\
+    ${file.reference.KControls-2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
