--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Project_Company_Management
 excludes=
+file.reference.jdatepicker-1.3.4.jar=C:\\Users\\ASUS\\Downloads\\jdatepicker-1.3.4.jar
 file.reference.KControls-2.0.jar=C:\\Users\\ASUS\\Desktop\\KControls\\dist\\KControls-2.0.jar
+file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\ASUS\\Downloads\\Compressed\\mysql-connector-java-8.0.28\\mysql-connector-java-8.0.28\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.KControls-2.0.jar}
+    ${file.reference.KControls-2.0.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
