--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Project Company Management
+application.vendor=ASUS
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Project_Company_Management.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Project_Company_Management
+endorsed.classpath=
 excludes=
 file.reference.jdatepicker-1.3.4.jar=C:\\Users\\ASUS\\Downloads\\jdatepicker-1.3.4.jar
 file.reference.KControls-2.0.jar=C:\\Users\\ASUS\\Desktop\\KControls\\dist\\KControls-2.0.jar
@@ -44,7 +46,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.KControls-2.0.jar}:\
-<<<<<<< HEAD
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${libs.absolutelayout.classpath}
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${file.reference.jdatepicker-1.3.4.jar}
