--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,9 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.KControls-2.0.jar=/Users/thinkpro/Desktop/BTL-Java/Project-Company-Management/lib_for_add/KControls.rar
+file.reference.mysql-connector-java-8.0.28.jar=/Users/thinkpro/Desktop/mysql-connector-java-8.0.28.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=/Users/thinkpro/Library/Application Support/NetBeans/12.6/build.properties
