--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,7 +48,8 @@ javac.classpath=\
     ${file.reference.KControls-2.0.jar}:\
     ${file.reference.jdatepicker-1.3.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.KControls-2.0.jar-1}
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${file.reference.jdatepicker-1.3.4.jar}
@@ -90,7 +91,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Project_Company_Management
-main.class=project.company.management.ProjectCompanyManagement
+main.class=project.company.management.DangNhapFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
