--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -90,7 +90,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Project_Company_Management
-main.class=project.company.management.ProjectCompanyManagement
+main.class=project.company.management.DangNhapFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
