--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,8 @@ file.reference.mysql-connector-java-8.0.28.jar=/Users/thinkpro/Desktop/BTL-Java/
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
+
 user.properties.file=/Users/thinkpro/Library/Application Support/NetBeans/12.6/build.properties
+
+user.properties.file=C:\\Users\\Phong Vu\\AppData\\Roaming\\NetBeans\\14\\build.properties
+
