--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ excludes=
 file.reference.jdatepicker-1.3.4.jar=C:\\Users\\ASUS\\Downloads\\jdatepicker-1.3.4.jar
 file.reference.KControls-2.0.jar=C:\\Users\\ASUS\\Desktop\\KControls\\dist\\KControls-2.0.jar
 
+file.reference.KControls-2.0.jar-1=../KControls/dist/KControls-2.0.jar
 file.reference.KControls-2.0.jar-2=lib_for_add\\KControls\\dist\\KControls-2.0.jar
 
 file.reference.KControls-2.0.jar-2=lib_for_add\\KControls-2.0.jar
@@ -52,7 +53,7 @@ javac.classpath=\
     ${file.reference.jdatepicker-1.3.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${libs.absolutelayout.classpath}:\
-
+    ${file.reference.KControls-2.0.jar-1}
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
 
     ${file.reference.KControls-2.0.jar-2}
