--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Project_Company_Management
 endorsed.classpath=
 excludes=
-file.reference.jdatepicker-1.3.4.jar=C:\\Users\\ASUS\\Downloads\\jdatepicker-1.3.4.jar
+file.reference.jdatepicker-1.3.4.jar-1=lib_for_add\\jdatepicker-1.3.4.jar
 file.reference.KControls-2.0.jar=C:\\Users\\ASUS\\Desktop\\KControls\\dist\\KControls-2.0.jar
 
 file.reference.KControls-2.0.jar-1=../KControls/dist/KControls-2.0.jar
@@ -43,17 +43,17 @@ file.reference.KControls-2.0.jar-2=lib_for_add\\KControls\\dist\\KControls-2.0.j
 
 file.reference.KControls-2.0.jar-2=lib_for_add\\KControls-2.0.jar
 
-file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\ASUS\\Downloads\\Compressed\\mysql-connector-java-8.0.28\\mysql-connector-java-8.0.28\\mysql-connector-java-8.0.28.jar
 
+file.reference.mysql-connector-java-8.0.28.jar-1=lib_for_add\\mysql-connector-java-8.0.28.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\ADMIN\\Downloads\\mysql-connector-java-8.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.KControls-2.0.jar}:\
-    ${file.reference.jdatepicker-1.3.4.jar}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.KControls-2.0.jar-1}
+    ${file.reference.KControls-2.0.jar-1}:\
+    ${file.reference.KControls-2.0.jar-2}:\
+    ${file.reference.jdatepicker-1.3.4.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar-1}
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
 
     ${file.reference.KControls-2.0.jar-2}
