--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ excludes=
 file.reference.jdatepicker-1.3.4.jar-1=lib_for_add\\jdatepicker-1.3.4.jar
 file.reference.KControls-2.0.jar=C:\\Users\\ASUS\\Desktop\\KControls\\dist\\KControls-2.0.jar
 
-file.reference.KControls-2.0.jar-1=../KControls/dist/KControls-2.0.jar
+file.reference.KControls-2.0.jar-1=lib_for_add\\KControls-2.0.jar
 file.reference.KControls-2.0.jar-2=lib_for_add\\KControls\\dist\\KControls-2.0.jar
 
 file.reference.KControls-2.0.jar-2=lib_for_add\\KControls-2.0.jar
@@ -50,7 +50,10 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.jdatepicker-1.3.4.jar-1}:\
+    ${file.reference.KControls-2.0.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar-1}
     ${file.reference.KControls-2.0.jar-1}:\
     ${file.reference.KControls-2.0.jar-2}:\
     ${file.reference.jdatepicker-1.3.4.jar-1}:\
