"ducduc fix xoaCB"

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -9,5 +9,5 @@ jlink.strip=false
 
 user.properties.file=C:\\Users\\Phong Vu\\AppData\\Roaming\\NetBeans\\14\\build.properties
 
-user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\14\\build.properties
 
