--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -119,7 +119,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Project_Company_Management
-main.class=project.company.management.DangNhapFrame
+main.class=project.company.management.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
