--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ excludes=
 file.reference.commons-collections4-4.4.jar=lib_for_add\\commons-collections4-4.4.jar
 file.reference.commons-compress-1.21.jar=lib_for_add\\commons-compress-1.21.jar
 file.reference.commons-io-2.11.0.jar=lib_for_add\\poi-bin-5.2.2\\lib\\commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-1=lib_for_add\\commons-io-2.11.0.jar
 file.reference.commons-logging-1.2.jar=lib_for_add\\commons-logging-1.2.jar
 file.reference.commons-math3-3.6.1.jar=lib_for_add\\commons-math3-3.6.1.jar
 file.reference.itextpdf-5.4.0.jar-1=lib_for_add\\itextpdf-5.4.0.jar
@@ -79,7 +80,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-full-5.2.2.jar}:\
     ${file.reference.slf4j-api-1.7.36.jar}:\
     ${file.reference.xmlbeans-5.0.3.jar}:\
-    ${file.reference.commons-io-2.11.0.jar}
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-io-2.11.0.jar-1}
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${file.reference.jdatepicker-1.3.4.jar}
